inventary add new product backend started

--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -113,7 +113,11 @@
     .custom-scrollbar::-webkit-scrollbar-thumb:hover {
         background: #198ec1;
     }
-
+    .input-icon-left{
+        position: absolute;
+        left: 5px;
+        top: 7px;
+    }
     #layout-menu {
         transition: all 0.3s ease-in-out;
     }
@@ -426,7 +430,7 @@
                         </a>
                     </li>
                     <li class="menu-main-item">
-                        <a href="/vitco-india/control/inventory/home" class="menu-link" data-link="inventory">
+                        <a href="/vitco-impex/control/inventory/home" class="menu-link" data-link="inventory">
                             <i class="bi bi-box2 me-3"></i>
                             <div data-i18n="Basic">Inventory</div>
                         </a>
